--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-employee-directory",
-  "homepage": "https://yarocruz.github.io/react-employee-directory",
+  "homepage": "ttps://github.com/BhaveshMaisuriya/react-employee-directoryy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
