--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://bhaveshmaisuriya.github.io/react-employee-directory",
   "name": "react-employee-directory",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +8,6 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
-    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.7.6",
+    "gh-pages": "^3.2.3",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.4.5"
   }
